--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "nodemon": "^3.1.0",
     "prisma": "^5.10.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.10.2"
   }
 }
