--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,6 +2,7 @@
   "name": "mess_management_backend",
   "version": "1.0.0",
   "description": "Folder for Backend programs.",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
