--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,10 @@
     "prisma": "^5.10.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2"
+    "@prisma/client": "^5.10.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
   }
 }
