--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "node-mailer": "^0.1.1",
     "zod": "^3.22.4"
   }
 }
