--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.2.0",
     "node-mailer": "^0.1.1",
     "otp-generator": "^4.0.1",
+    "qrcode": "^1.5.3",
     "zod": "^3.22.4"
   }
 }
