--- a/Admin/package.json
+++ b/Admin/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
+    "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2"
