--- a/Admin/package.json
+++ b/Admin/package.json
@@ -13,10 +13,12 @@
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-label": "^2.0.2",
     "@tabler/icons-react": "^3.1.0",
+    "apexcharts": "^3.48.0",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.0.7",
