--- a/Admin/package.json
+++ b/Admin/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.0.7",
