student table ui added

--- a/Admin/package.json
+++ b/Admin/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@nextui-org/react": "^2.2.10",
+    "@nextui-org/table": "^2.0.28",
     "@radix-ui/react-label": "^2.0.2",
     "@tabler/icons-react": "^3.1.0",
     "apexcharts": "^3.48.0",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.14",
     "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
