--- a/Admin/package.json
+++ b/Admin/package.json
@@ -17,8 +17,11 @@
     "@tabler/icons-react": "^3.1.0",
     "apexcharts": "^3.48.0",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "js-file-download": "^0.4.12",
+    "lucide-react": "^0.360.0",
+    "radix-ui": "^1.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
