--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,11 +20,13 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "node-mailer": "^0.1.1",
     "otp-generator": "^4.0.1",
     "qrcode": "^1.5.3",
