--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  #sliding_clipped_nav_bar: ^3.1.1
   flutter:
     sdk: flutter
   provider: ^6.1.2
