--- a/Admin/package.json
+++ b/Admin/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "file-saver": "^2.0.5",
     "js-file-download": "^0.4.12",
     "lucide-react": "^0.360.0",
     "radix-ui": "^1.0.1",
@@ -29,7 +30,8 @@
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.0.7",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
