--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -9,7 +9,11 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/index.js"
+        "dest": "src/index.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
       }
     ]
   }
