add prisma seed

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,10 +4,14 @@
   "description": "Folder for Backend programs.",
   "type": "module",
   "main": "src/index.js",
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "seed": "node prisma/seed.js"
   },
   "author": "",
   "license": "ISC",
