--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   intl: ^0.19.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
