--- a/Admin/package.json
+++ b/Admin/package.json
@@ -25,10 +25,12 @@
     "radix-ui": "^1.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2",
     "xlsx": "^0.18.5"
