--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -32,12 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.2
-#    qr_code_scanner: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  qr_code_scanner: ^0.4.0
+  mobile_scanner: ^4.0.1
+  tiny_alert: ^1.1.1
   intl: ^0.19.0
   syncfusion_flutter_pdf: ^25.1.39
   flutter_pdfview: ^1.3.2
