--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  audioplayers: ^6.0.0
   mobile_scanner: ^4.0.1
   tiny_alert: ^1.1.1
   intl: ^0.19.0
@@ -74,6 +75,7 @@ flutter:
   assets:
     - assets/images/
     - assets/menu_pdfs/Mess_Menu_north_campus.pdf
+    - assets/audio/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
