--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.5-lts.1",
     "node-mailer": "^0.1.1",
     "otp-generator": "^4.0.1",
+    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.3",
     "zod": "^3.22.4"
   }
