--- a/Admin/package.json
+++ b/Admin/package.json
@@ -31,6 +31,7 @@
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "reactjs-popup": "^2.0.6",
     "sweetalert2": "^11.10.8",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2",
