--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   http: ^1.2.1
   syncfusion_flutter_pdfviewer: ^25.1.39
   flutter_secure_storage: ^4.2.1
+  loading_animation_widget: ^1.2.1
 #  webview_flutter: ^4.7.0
 #  advance_pdf_viewer: ^2.0.5+1
 #  advance_pdf_viewer2: ^2.0.6-beta.2
