--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -47,9 +47,14 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^25.1.39
   flutter_secure_storage: ^4.2.1
   loading_animation_widget: ^1.2.1
+  flutter_launcher_icons: ^0.13.1
 #  webview_flutter: ^4.7.0
 #  advance_pdf_viewer: ^2.0.5+1
 #  advance_pdf_viewer2: ^2.0.6-beta.2
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_logo.png"
 dev_dependencies:
   flutter_test:
     sdk: flutter
