--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "src/ndex.js",
-        "use": "@now/node"
+        "src": "src/index.js",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/index.js",
+        "dest": "/",
         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
         "headers": {
         "Access-Control-Allow-Origin": "*"
