--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "seed": "node prisma/seed.js"
   },
   "author": "",
