--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,7 +14,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "postinstall": "prisma generate"
   },
   "author": "",
   "license": "ISC",
