--- a/Admin/package.json
+++ b/Admin/package.json
@@ -10,18 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.567.0",
     "@material-tailwind/react": "^2.1.9",
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/table": "^2.0.28",
     "@radix-ui/react-label": "^2.0.2",
     "@tabler/icons-react": "^3.1.0",
     "apexcharts": "^3.48.0",
+    "aws-sdk": "^2.1611.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "file-saver": "^2.0.5",
     "js-file-download": "^0.4.12",
     "lucide-react": "^0.360.0",
+    "mime-types": "^2.1.35",
     "radix-ui": "^1.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
