--- a/Admin/package.json
+++ b/Admin/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.567.0",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "@material-tailwind/react": "^2.1.9",
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/table": "^2.0.28",
