--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   loading_animation_widget: ^1.2.1
   flutter_launcher_icons: ^0.13.1
+  image_picker: ^1.1.1
 #  webview_flutter: ^4.7.0
 #  advance_pdf_viewer: ^2.0.5+1
 #  advance_pdf_viewer2: ^2.0.6-beta.2
