--- a/Admin/package.json
+++ b/Admin/package.json
@@ -33,6 +33,7 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-lottie": "^1.2.4",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
     "react-tailwindcss-datepicker": "^1.6.6",
